syntax = "proto3";

package pb;

import "portfolio.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message CreatePortfolioRequest {
  string name = 1;
}

message CreatePortfolioResponse {
  Portfolio portfolio = 1;
}